<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="all">All</string>
  <string name="app_name">Petronius</string>
  <string name="archive">Archive</string>
  <string name="archive_load">Archive load</string>
  <string name="archive_load_chosen">You have chosen to load</string>
  <string name="archive_load_ok">Archive loaded successfully</string>
    <string name="archive_not_restored">The archive may be in an inconsistent
    state.\nPlease reload last backup.</string>
  <string name="archive_prefix">petronius</string>
  <string name="archive_restored">Old archive has been restored</string>
  <string name="archive_save">Archive save</string>
  <string name="archive_save_ok">Archive saved successfully</string>
  <string name="autumn">Autumn</string>
  <string name="available">Available</string>
  <string name="cancel">Cancel</string>
  <string name="change_image">Change image</string>
  <string name="choices_not_saved">If you exit this screen the proposed choices will be
    lost.\nDo you wish to save them in the history archive?</string>
  <string name="chosen_clothes_picker">Chosen clothes picker</string>
  <string name="chosen_garment_view">Chosen garment view</string>
  <string name="chosen_list_empty">No clothes choosen. Add new clothes from \"Clothes list\"
    menu for the garment types you selected</string>
  <string name="clothes_choice">Clothes choice</string>
  <string name="clothes_chooser">Clothes chooser</string>
  <string name="clothes_list">Clothes list</string>
  <string name="clothes_loading">Clothes loading</string>
  <string name="clothes_picker">Clothes picker</string>
  <string name="compatibilities_loading">Compatibilities loading</string>
  <string name="compatibility">Compatibility</string>
  <string name="compatibility_deletion">Compatibility deletion</string>
  <string name="compatibility_edit">Compatibility edit</string>
  <string name="compatibility_insertion">Compatibility insertion</string>
  <string name="compatibility_list">Compatibility list</string>
  <string name="compatibility_retrieve">Compatibility retrieve</string>
  <string name="compatibility_update">Compatibility update</string>
  <string name="coat">Coat</string>
  <string name="confirm_archive_load">The current archive will be deleted, please ensure to have
    an up to date backup in case something goes wrong.\nDo you wish to continue?
  </string>
  <string name="database">petronius</string>
  <string name="date">Date</string>
  <string name="date_of_purchase">Date of Purchase</string>
  <string name="delete_archive">Delete archive</string>
  <string name="delete_compatibility">Delete compatibility</string>
  <string name="delete_garment">Delete garment</string>
  <string name="delete_history_record">Delete history record</string>
  <string name="discard_choice">Discard choice</string>
  <string name="dont_save">Don\'t save</string>
  <string name="edit_compatibility">Edit compatibility</string>
  <string name="edit_garment">Edit garment</string>
  <string name="edit_history_record">Edit history record</string>
  <string name="elegance">Elegance</string>
  <string name="enter_file_name">Enter file name</string>
  <string name="err_already_at_first_garment">The selected garment is the first in the list</string>
  <string name="err_already_at_last_garment">The selected garment is the last in the list</string>
  <string name="err_archive_not_valid">The selected object is not a valid Petronius archive
  </string>
  <string name="err_cant_discard_garment">You can\'t discard the only garment in the chosen list
  </string>
  <string name="err_compatibility_already_present">This compatibility is already present</string>
  <string name="err_create_dir_archive">Cannot create archive directory on SD card</string>
  <string name="err_elegance">Minimum elegance cannot be greater than maximum</string>
  <string name="err_garment_not_picked">You must select a garment</string>
  <string name="err_history_record_already_present">This history record is already present</string>
  <string name="err_insert_compatibility">Error on insertion of compatibility</string>
  <string name="err_insert_garment">Error on insertion of garment</string>
  <string name="err_insert_history_record">Error on insertion of history record</string>
  <string name="err_load_help">Error loading help resource</string>
  <string name="err_must_choose_different_garments">You must select two different garments</string>
  <string name="err_no_garment_selected">At least one garment must be selected</string>
  <string name="err_on">Error on</string>
  <string name="err_on_choice">Error on choice</string>
  <string name="err_on_compatibility">Error on compatibility</string>
  <string name="err_on_garment">Error on garment</string>
  <string name="err_on_history_record">Error on history record</string>
  <string name="err_on_history_save">Error on history save</string>
  <string name="err_seasons">At least one season must be selected</string>
  <string name="err_two_garments_not_picked">You must select two garments</string>
  <string name="err_types">At least one garment type must be selected</string>
  <string name="err_unhandled_tag">Unhandled tag</string>
  <string name="file_already_exists">The file already exists. Do you wish to overwrite it?
  </string>
  <string name="filter_by">Filter by</string>
  <string name="from">From</string>
  <string name="following_error_occurred">the following errorr occurred</string>
  <string name="garment_deletion">Garment deletion</string>
  <string name="garment_edit">Garment edit</string>
  <string name="garment_insertion">Garment insertion</string>
  <string name="garment_retrieve">Garment retrieve</string>
  <string name="garment_types">Garment types</string>
  <string name="garment_update">Garment update</string>
  <string name="grade">Grade</string>
  <string name="help">Help</string>
  <string name="history">History</string>
  <string name="history_loading">History loading</string>
  <string name="history_record_deletion">History record deletion</string>
  <string name="history_record_edit">History record edit</string>
  <string name="history_record_insertion">History record insertion</string>
  <string name="history_record_list">History record list</string>
  <string name="history_record_retrieve">History record retrieve</string>
  <string name="history_record_update">History record update</string>
  <string name="history_save">History save</string>
  <string name="in_progress">in progress</string>
  <string name="invalid_filename">The file name is not valid</string>
  <string name="last_selection">Last selection</string>
  <string name="load_archive">Load archive</string>
  <string name="name">Name</string>
  <string name="new_compatibility">New compatibility</string>
  <string name="new_garment">New garment</string>
  <string name="new_history_record">New history record</string>
  <string name="next_choice">Next choice</string>
  <string name="open_compatibility_list">Open compatibility list</string>
  <string name="open_history_list">Open history list</string>
  <string name="ok">OK</string>
  <string name="pick_garment">Pick garment</string>
  <!--  <string name="please_wait">Please wait...</string>-->
  <string name="preference">Preference</string>
  <string name="previous_choice">Previous choice</string>
  <string name="pull_jacket">Pull/Jacket</string>
  <string name="random">Random</string>
  <string name="really_delete_archive">Do you really want to delete archive</string>
  <string name="really_delete_garment">Do you really want to delete garment</string>
  <string name="really_delete_selected_compatibility">Do you really want to delete the selected compatibility?
  </string>
  <string name="really_delete_selected_history_record">Do you really want to delete the selected history record?
  </string>
  <!--  <string name="reset">Reset</string>-->
  <string name="reset_default_image">Reset default image</string>
  <string name="save">Save</string>
  <string name="save_archive">Save archive</string>
  <string name="save_choices">Save choices</string>
  <string name="save_history_records">Save history records</string>
  <string name="sdcard_not_readable">External storage is not readable</string>
  <string name="sdcard_not_writable">External storage is not writable</string>
  <string name="season">Season</string>
  <string name="seasons">Seasons</string>
  <string name="selection_count">Selection count</string>
  <string name="set_available">Set available</string>
  <string name="set_unavailable">Set unvailable</string>
  <string name="shirt">Shirt</string>
  <string name="shoes">Shoes</string>
  <string name="skirt_trousers">Skirt/Trousers</string>
  <string name="spring">Spring</string>
  <string name="summer">Summer</string>
  <string name="to">To</string>
  <string name="type">Type</string>
  <string name="update_compatibilities">Update compatibilities</string>
  <!--  <string name="value">Value</string>-->
  <string name="view_parameters">View parameters</string>
  <string name="weather">Weather</string>
  <!--  <string name="weighted_value">Weighted value</string>-->
  <string name="winter">Winter</string>

  <string-array name="compatibility_levels">
    <item>Don\'t fit</item>
    <item>Better not</item>
    <item>OK</item>
    <item>Very good</item>
  </string-array>
  <string-array name="elegance_levels">
    <item>Casual</item>
    <item>Smart casual</item>
    <item>Informal</item>
    <item>Day formal</item>
    <item>Evening formal</item>
  </string-array>
  <string-array name="garment_types">
    <item>Pull/Jacket</item>
    <item>Shirt</item>
    <item>Skirt/Trousers</item>
    <item>Coat</item>
    <item>Shoes</item>
  </string-array>
  <string-array name="one_ten">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
  </string-array>
  <string-array name="season_list">
    <item>Autumn</item>
    <item>Winter</item>
    <item>Spring</item>
    <item>Summer</item>
  </string-array>
  <string-array name="weather_types">
    <item>All</item>
    <item>Sunny</item>
    <item>Rainy</item>
  </string-array>
</resources>