<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:title="@string/edit_garment" android:id="@+id/edit_garment"
    android:icon="@android:drawable/ic_menu_edit" android:orderInCategory="1"></item>
  <item android:title="@string/delete_garment" android:id="@+id/delete_garment"
    android:icon="@android:drawable/ic_menu_delete" android:orderInCategory="2"></item>
  <item android:title="@string/open_history_list" android:id="@+id/open_history_list"
    android:icon="@android:drawable/ic_menu_recent_history"
    android:orderInCategory="3"></item>
  <item android:title="@string/open_compatibility_list" android:id="@+id/open_compatibility_list"
    android:icon="@android:drawable/ic_menu_report_image"
    android:orderInCategory="4"></item>
  <item android:title="@string/help" android:id="@+id/edit_garment_help"
    android:icon="@android:drawable/ic_menu_help" android:orderInCategory="5"></item>
</menu>
