<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  android:orientation="vertical">
  <LinearLayout android:focusable="true"
    android:focusableInTouchMode="true" android:layout_width="0px"
    android:layout_height="0px" />
  <ScrollView android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <LinearLayout android:orientation="vertical"
      android:layout_width="fill_parent" android:layout_height="fill_parent">
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/name"></TextView>
      <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/edit_garment_name"></EditText>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/type"></TextView>
      <Spinner android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/edit_garment_type"
        android:entries="@array/garment_types"></Spinner>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/grade"></TextView>
      <Spinner android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/edit_garment_grade"
        android:entries="@array/one_ten"></Spinner>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/date_of_purchase"></TextView>
      <DatePicker android:id="@+id/edit_garment_date_of_purchase"
        android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/elegance"></TextView>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="fill_parent"
          android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/from"></TextView>
          <Spinner android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:id="@+id/edit_garment_elegance_min"
            android:entries="@array/elegance_levels"></Spinner>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="fill_parent"
          android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/to"></TextView>
          <Spinner android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:id="@+id/edit_garment_elegance_max"
            android:entries="@array/elegance_levels"></Spinner>
        </LinearLayout>
      </LinearLayout>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/seasons"></TextView>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_weight="1" android:orientation="vertical">
          <CheckBox android:text="@string/autumn" android:id="@+id/edit_garment_autumn"
            android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
          <CheckBox android:text="@string/spring" android:id="@+id/edit_garment_spring"
            android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_weight="1" android:orientation="vertical">
          <CheckBox android:text="@string/winter" android:id="@+id/edit_garment_winter"
            android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
          <CheckBox android:text="@string/summer" android:id="@+id/edit_garment_summer"
            android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
        </LinearLayout>
      </LinearLayout>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_weight="2" android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/weather"></TextView>
          <Spinner android:layout_height="wrap_content"
            android:layout_width="fill_parent" android:id="@+id/edit_garment_weather"
            android:entries="@array/weather_types"></Spinner>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_weight="1" android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/available"></TextView>
          <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox android:layout_height="wrap_content"
              android:layout_width="wrap_content" android:id="@+id/edit_garment_available"></CheckBox>
          </LinearLayout>
        </LinearLayout>
      </LinearLayout>
      <LinearLayout android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <Button android:id="@+id/edit_garment_cancel" android:text="@string/cancel"
          android:layout_weight="1" android:layout_height="wrap_content"
          android:layout_width="fill_parent"></Button>
        <Button android:layout_height="wrap_content" android:id="@+id/edit_garment_ok"
          android:text="@string/ok" android:layout_weight="1"
          android:layout_width="fill_parent"></Button>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
