<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  android:orientation="vertical">
  <LinearLayout android:focusable="true"
    android:focusableInTouchMode="true" android:layout_width="0px"
    android:layout_height="0px" />
  <ScrollView android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <LinearLayout android:orientation="vertical"
      android:layout_width="fill_parent" android:layout_height="fill_parent">
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/date"></TextView>
      <DatePicker android:id="@+id/chooser_date"
        android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/elegance"></TextView>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="fill_parent"
          android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/from"></TextView>
          <Spinner android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:id="@+id/chooser_elegance_min"
            android:entries="@array/elegance_levels"></Spinner>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="wrap_content" android:layout_height="fill_parent"
          android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/to"></TextView>
          <Spinner android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:id="@+id/chooser_elegance_max"
            android:entries="@array/elegance_levels"></Spinner>
        </LinearLayout>
      </LinearLayout>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent" android:layout_height="fill_parent"
          android:layout_weight="1" android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/season"></TextView>
          <Spinner android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:id="@+id/chooser_season"
            android:entries="@array/season_list"></Spinner>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent" android:layout_height="fill_parent"
          android:layout_weight="1" android:orientation="vertical">
          <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/weather"></TextView>
          <Spinner android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:id="@+id/chooser_weather"
            android:entries="@array/weather_types"></Spinner>
        </LinearLayout>
      </LinearLayout>
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/garment_types"></TextView>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:orientation="horizontal">
        <CheckBox android:text="@string/pull_jacket" android:id="@+id/chooser_pull_jacket"
          android:layout_width="fill_parent" android:layout_height="wrap_content"
          android:layout_weight="1" android:checked="true"></CheckBox>
        <CheckBox android:text="@string/shirt" android:id="@+id/chooser_shirt"
          android:layout_width="fill_parent" android:layout_height="wrap_content"
          android:layout_weight="1" android:checked="true"></CheckBox>
      </LinearLayout>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:orientation="horizontal">
        <CheckBox android:text="@string/skirt_trousers" android:id="@+id/chooser_skirt_trousers"
          android:layout_width="fill_parent" android:layout_height="wrap_content"
          android:layout_weight="1" android:checked="true"></CheckBox>
        <CheckBox android:text="@string/coat" android:id="@+id/chooser_coat"
          android:layout_width="fill_parent" android:layout_height="wrap_content"
          android:layout_weight="1" android:checked="true"></CheckBox>
      </LinearLayout>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:orientation="horizontal">
        <CheckBox android:text="@string/shoes" android:id="@+id/chooser_shoes"
          android:layout_width="fill_parent" android:layout_height="wrap_content"
          android:layout_weight="1" android:checked="true"></CheckBox>
      </LinearLayout>
      <LinearLayout android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <Button android:id="@+id/chooser_cancel" android:text="@string/cancel"
          android:layout_weight="1" android:layout_height="wrap_content"
          android:layout_width="fill_parent"></Button>
        <Button android:layout_height="wrap_content" android:id="@+id/chooser_ok"
          android:text="@string/ok" android:layout_weight="1"
          android:layout_width="fill_parent"></Button>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
