<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  android:orientation="vertical">
  <LinearLayout android:focusable="true"
    android:focusableInTouchMode="true" android:layout_width="0px"
    android:layout_height="0px" />
  <TextView android:text="@string/enter_file_name"
    android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
  <EditText android:layout_width="fill_parent" android:id="@+id/edit_save_file_name"
    android:layout_height="wrap_content"></EditText>
  <LinearLayout android:layout_height="wrap_content"
    android:layout_width="fill_parent">
    <Button android:id="@+id/save_archive_cancel" android:text="@string/cancel"
      android:layout_weight="1" android:layout_height="wrap_content"
      android:layout_width="fill_parent"></Button>
    <Button android:layout_height="wrap_content" android:id="@+id/save_archive_ok"
      android:text="@string/ok" android:layout_weight="1" android:layout_width="fill_parent"></Button>
  </LinearLayout>
</LinearLayout>
