<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <LinearLayout android:focusable="true"
    android:focusableInTouchMode="true" android:layout_width="0px"
    android:layout_height="0px" />
  <TextView android:text="@string/filter_by" android:layout_width="wrap_content"
    android:layout_height="wrap_content"></TextView>
  <LinearLayout android:layout_height="wrap_content"
    android:orientation="horizontal" android:layout_width="fill_parent">
    <LinearLayout android:layout_height="wrap_content"
      android:orientation="vertical" android:layout_width="wrap_content">
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/type"></TextView>
      <Spinner android:layout_height="wrap_content" android:id="@+id/edit_garment_filter_type"
        android:layout_width="wrap_content"></Spinner>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
      android:orientation="vertical" android:layout_width="fill_parent"
      android:layout_weight="1">
      <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/name"></TextView>
      <EditText android:id="@+id/edit_garment_filter_name"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="1"></EditText>
    </LinearLayout>
  </LinearLayout>
  <ListView android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:layout_weight="1" android:id="@android:id/list"
    android:fastScrollEnabled="true"></ListView>
</LinearLayout>
